--- a/pom.xml
+++ b/pom.xml
@@ -47,3 +47,13 @@
 
 	
 </project>
+
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>3.3.2</version>
+    </plugin>
+  </plugins>
+</build>
